# llm-agent

./: .gitignore  Makefile  README.md  pyproject.toml
core/: config.py
core/agent/: llm.py  prompt.py  tools.py
core/data/: csv_loader.py  extractor.py  metadata_extractor.py
test/: test_data.py
