[project]
name = "llm-agent"
version = "0.1.0"
description = "Explore about LLM Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.13",
    "langgraph>=0.2.60",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scipy>=1.14.1",
    "streamlit>=1.41.1",
]
